feat: bump jdk -> 21