@@ -6,27 +6,26 @@ plugins {
     id("java")
 }
 
-allprojects {
-    group = "kasanari"
-    version = "0.1.0"
-
-    repositories {
-        mavenCentral()
-        mavenLocal()
-    }
-}
+group = "com.nryanov.kasanari"
+version = providers.gradleProperty("releaseVersion").orElse("0.1.0").get()
 
 subprojects {
     apply(plugin = "java")
     apply(plugin = "java-library")
 
-    extensions.configure<JavaPluginExtension> {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+    group = rootProject.group
+    version = rootProject.version
+
+    repositories {
+        mavenCentral()
+        mavenLocal()
     }
 
-    tasks.withType<Test>().configureEach {
-        useJUnitPlatform()
+    plugins.withType<JavaPlugin>().configureEach {
+        extensions.configure<JavaPluginExtension> {
+            sourceCompatibility = JavaVersion.VERSION_21
+            targetCompatibility = JavaVersion.VERSION_21
+        }
     }
 
     dependencies {
@@ -38,12 +37,36 @@ subprojects {
         add("testRuntimeOnly", "org.junit.platform:junit-platform-launcher:1.12.2")
     }
 
-    tasks.named<JavaCompile>("compileJava") {
+    tasks.withType<JavaCompile>().configureEach {
         options.encoding = "UTF-8"
         options.compilerArgs.add("-parameters")
     }
 
-    tasks.named<JavaCompile>("compileTestJava") {
-        options.encoding = "UTF-8"
+    tasks.withType<Test>().configureEach {
+        useJUnitPlatform()
+        systemProperty("java.util.logging.manager", "org.jboss.logmanager.LogManager")
+        jvmArgs(
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.math=ALL-UNNAMED",
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+            "--add-opens", "java.base/java.text=ALL-UNNAMED",
+            "--add-opens", "java.base/java.time=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.regex=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED",
+            "--add-opens", "java.sql/java.sql=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.nio.cs=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.security.action=ALL-UNNAMED",
+            "-Djava.security.manager=allow"
+        )
     }
 }
